# ELAI

./: INSTALL  Install  Makefile.in  README.md  Readme  config.h  configure  configure.in  custom.cc  elai.h
Driver/: Makefile  README  b1.mtx  b2.mtx  solver.cc
Elai/: bicgsafe.hpp  bicgstab.hpp  blas.hpp  cg.hpp  clique.hpp  coherence.hpp  config.hpp  def.hpp  entire_function.hpp  entire_operator.hpp  expression.hpp  family.hpp  fillin.hpp  generator.hpp  gmres.hpp  ic.hpp  ilu.hpp  jacobi.hpp  jacobi_conditioner.hpp  ksp.hpp  linear_function.hpp  linear_operator.hpp  lu.hpp  matrix.hpp  metis.hpp  mtmetis.hpp  mumps.hpp  portal.hpp  preconditioner.hpp  sor.hpp  sor_conditioner.hpp  space.hpp  subjugator.hpp  superlu.hpp  sync.hpp  util.hpp  vector.hpp
Misc/: Makefile.in  Makefile.inc.gnu  Makefile.inc.gnu-mkl  metis.patch
Misc/Patches/: metis.patch  mumps-makefile.inc.in  scalapack-slmake.inc  scalapack-slmake.inc.in
Obsolete/Misc/: Makefile.inc.intel  SLmake.inc.mkl
Test/: A.mtx  Run  bicgsafeTest.cc  bicgstabTest.cc  blasTest.cc  cgTest.cc  coherenceTest.cc  dcTest.cc  ddc2Test.cc  ddcTest.cc  entireTest0.cc  entireTest1.cc  entireTest2.cc  entireTest3.cc  extendTest.cc  familyTest.cc  fillin.out  fillinTest.cc  fillinTest2.cc  icTest.cc  iluTest.cc  jacobiTest.cc  jacobi_conditionerTest.cc  linear_functionTest.cc  linear_operatorTest.cc  luTest.cc  matrix.mm  matrixTest.cc  mergeTest.cc  metisTest.cc  portalTest1.cc  portalTest2.cc  runGrind  runMetis  runMpi  runMumps  runProf  runTest  scalingTest.cc  sorTest.cc  (+5 more)
python/: Makefile.in  elai.i  proxy.hpp  setup.py.in
python/Test/: A1.mtx  A2.mtx  Makefile.in  README  b1.mtx  b2.mtx  batch.sh  config.h.in  configure  configure.in  solver.cc  solver.py
swig/: Makefile.in  setup.py.in
